--- a/app/src/main/res/layout/card_home_item.xml
+++ b/app/src/main/res/layout/card_home_item.xml
@@ -53,6 +53,7 @@
             android:textColor="#A9735B"
             android:gravity="start" />
         <Button
+            android:id="@+id/add_button"
             android:textColor="#FFF1D4"
             android:layout_marginTop="30dp"
             android:layout_width="100dp"
