--- a/app/src/main/res/layout/dialog_item.xml
+++ b/app/src/main/res/layout/dialog_item.xml
@@ -6,20 +6,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
 <LinearLayout
-    android:padding="20dp"
     android:layout_margin="20dp"
+    android:padding="10dp"
     android:layout_gravity="center"
     android:gravity="center"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="vertical">
     <ImageView
+        android:scaleType="fitXY"
+        android:id="@+id/item_image_d"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:src="@color/colorPrimary"
         android:layout_gravity="center"/>
     <TextView
+        android:id="@+id/item_name_d"
         android:textSize="15dp"
         android:textColor="#000000"
         android:layout_width="wrap_content"
@@ -30,7 +34,7 @@
     <LinearLayout
         android:weightSum="3"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <LinearLayout
             android:layout_marginBottom="5dp"
@@ -40,132 +44,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <!--        <LinearLayout-->
-            <!--            android:gravity="center"-->
-            <!--            android:orientation="horizontal"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content">-->
-            <!--            <ImageButton-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:src="@drawable/ic_add_box"-->
-            <!--                android:background="@android:color/transparent"/>-->
-            <!--            <EditText-->
-            <!--                android:textSize="15dp"-->
-            <!--                android:background="@drawable/edit_text_box"-->
-            <!--                android:hint="0"-->
-            <!--                android:textAlignment="center"-->
-            <!--                android:layout_width="50dp"-->
-            <!--                android:layout_height="20dp"-->
-            <!--                android:text="0"-->
-            <!--                android:gravity="center_horizontal" />-->
-            <!--            <ImageButton-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:src="@drawable/ic_minus"-->
-            <!--                android:background="@android:color/transparent"/>-->
-            <!--            <TextView-->
-            <!--                android:textColor="#000000"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:text="Kg"/>-->
-            <!--            <TextView-->
-            <!--                android:text="="-->
-            <!--                android:textStyle="bold"-->
-            <!--                android:textColor="#000000"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"/>-->
-            <!--            <TextView-->
-            <!--                android:textColor="#000000"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:text=" Rs.0"-->
-            <!--                />-->
-            <!--        </LinearLayout>-->
-            <!--        <LinearLayout-->
-            <!--            android:gravity="center"-->
-            <!--            android:orientation="horizontal"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content">-->
-            <!--            <ImageButton-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:src="@drawable/ic_add_box"-->
-            <!--                android:background="@android:color/transparent"/>-->
-            <!--            <EditText-->
-            <!--                android:textAlignment="center"-->
-            <!--                android:textSize="15dp"-->
-            <!--                android:background="@drawable/edit_text_box"-->
-            <!--                android:hint="0"-->
-            <!--                android:layout_width="50dp"-->
-            <!--                android:layout_height="20dp"-->
-            <!--                android:text="0"-->
-            <!--                android:gravity="center_horizontal" />-->
-            <!--            <ImageButton-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:src="@drawable/ic_minus"-->
-            <!--                android:background="@android:color/transparent"/>-->
-            <!--            <TextView-->
-            <!--                android:textColor="#000000"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:text="x100 gms"/>-->
-            <!--            <TextView-->
-            <!--                android:text="  = "-->
-            <!--                android:textStyle="bold"-->
-            <!--                android:textColor="#000000"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"/>-->
-            <!--            <TextView-->
-            <!--                android:textColor="#000000"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:text=" Rs.0"-->
-            <!--                />-->
-            <!--        </LinearLayout>-->
-            <!--        <LinearLayout-->
-            <!--            android:gravity="center"-->
-            <!--            android:orientation="horizontal"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content">-->
-            <!--            <ImageButton-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:src="@drawable/ic_add_box"-->
-            <!--                android:background="@android:color/transparent"/>-->
-            <!--            <EditText-->
-            <!--                android:textSize="15dp"-->
-            <!--                android:background="@drawable/edit_text_box"-->
-            <!--                android:hint="0"-->
-            <!--                android:textAlignment="center"-->
-            <!--                android:layout_width="50dp"-->
-            <!--                android:layout_height="20dp"-->
-            <!--                android:text="1"-->
-            <!--                android:gravity="center_horizontal" />-->
-            <!--            <ImageButton-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:src="@drawable/ic_minus"-->
-            <!--                android:background="@android:color/transparent"/>-->
-            <!--            <TextView-->
-            <!--                android:textColor="#000000"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:text=" Kg"/>-->
-            <!--            <TextView-->
-            <!--                android:text="     = "-->
-            <!--                android:textStyle="bold"-->
-            <!--                android:textColor="#000000"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"/>-->
-            <!--            <TextView-->
-            <!--                android:textColor="#000000"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:text=" Rs.10"-->
-            <!--                />-->
-            <!--        </LinearLayout>-->
+
             <LinearLayout
                 android:layout_margin="5dp"
                 android:layout_weight="1"
@@ -174,18 +53,27 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
                 <ImageButton
+                    android:id="@+id/plus_button_kg"
                     android:layout_weight="1"
                     android:layout_width="40dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_add_box"
                     android:background="@android:color/transparent"/>
+
                 <EditText
-                    android:layout_weight="1"
-                    android:layout_width="40dp"
+                    android:hint="0"
+                    android:maxLength="3"
+                    android:textAlignment="center"
+                    android:id="@+id/edit_kg"
+                    android:inputType="number"
+                    android:layout_width="45dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/edit_text_box"
-                    />
+                    android:gravity="center_horizontal" />
+
                 <ImageButton
+                    android:id="@+id/minus_button_kg"
                     android:layout_weight="1"
                     android:layout_width="40dp"
                     android:layout_height="match_parent"
@@ -200,18 +88,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
                 <ImageButton
+                    android:id="@+id/plus_button_gm"
                     android:layout_weight="1"
                     android:layout_width="40dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_add_box"
                     android:background="@android:color/transparent"/>
                 <EditText
+                    android:hint="0"
+                    android:maxLines="1"
+                    android:maxLength="3"
+                    android:textAlignment="center"
+                    android:id="@+id/edit_gm"
+                    android:inputType="number"
                     android:layout_weight="1"
-                    android:layout_width="40dp"
+                    android:layout_width="45dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/edit_text_box"
-                    />
+                    android:gravity="center_horizontal" />
                 <ImageButton
+                    android:id="@+id/minus_button_gm"
                     android:layout_weight="1"
                     android:layout_width="40dp"
                     android:layout_height="match_parent"
@@ -226,18 +122,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
                 <ImageButton
+                    android:id="@+id/plus_button_pcs"
                     android:layout_weight="1"
                     android:layout_width="40dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_add_box"
                     android:background="@android:color/transparent"/>
                 <EditText
+                    android:hint="0"
+                    android:maxLines="1"
+                    android:maxLength="4"
+                    android:textAlignment="center"
+                    android:id="@+id/edit_pcs"
+                    android:inputType="number"
                     android:layout_weight="1"
-                    android:layout_width="40dp"
+                    android:layout_width="45dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/edit_text_box"
-                    />
+                    android:gravity="center_horizontal" />
                 <ImageButton
+                    android:id="@+id/minus_button_pcs"
                     android:layout_weight="1"
                     android:layout_width="40dp"
                     android:layout_height="match_parent"
@@ -263,14 +167,14 @@
             <TextView
                 android:gravity="center|left"
                 android:layout_margin="5dp"
-                android:text="x 100 gm"
+                android:text="Gm"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
             <TextView
                 android:gravity="center|left"
                 android:layout_margin="5dp"
-                android:text="Pieces"
+                android:text="Pcs"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
@@ -283,6 +187,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
+                android:id="@+id/text_kg_value"
                 android:gravity="left|center"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
@@ -290,6 +195,7 @@
                 android:layout_height="match_parent"
                 android:text=" = Rs 0"/>
             <TextView
+                android:id="@+id/text_gm_value"
                 android:gravity="left|center"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
@@ -297,6 +203,7 @@
                 android:layout_height="match_parent"
                 android:text=" = Rs 0"/>
             <TextView
+                android:id="@+id/text_pcs_value"
                 android:gravity="left|center"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
@@ -317,22 +224,24 @@
     <LinearLayout
         android:padding="5dp"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <Button
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:elevation="4dp"
+            android:layout_margin="5dp"
+            android:id="@+id/add_to_cart_button"
+            android:elevation="8dp"
             android:text="Add to cart"
             android:background="@drawable/back_button_item_cart"
             android:layout_width="100dp"
             android:layout_height="40dp"/>
         <Button
+            android:layout_margin="5dp"
+            android:id="@+id/buy_now_button"
             android:layout_marginLeft="30dp"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:background="@drawable/back_button_item_buy"
-            android:elevation="4dp"
+            android:elevation="8dp"
             android:text="buy now" />
     </LinearLayout>
 </LinearLayout>
