--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,7 @@
             android:textColorHint="#707070"
             android:hint="Phone"
             android:gravity="center_vertical"
-            android:drawableLeft="@drawable/ic_phone"
+            android:drawableLeft="@drawable/ic_smartphone_black"
             android:background="@drawable/edit_sign_in_back"
             android:layout_width="match_parent"
             android:layout_height="35dp"/>
@@ -72,6 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="35dp"/>
         <CheckBox
+            android:id="@+id/check_show"
             android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -79,7 +80,7 @@
             android:layout_gravity="right"
             android:layout_marginRight="15dp"/>
         <Button
-            android:id="@+id/send_otp"
+            android:id="@+id/login"
             android:layout_marginBottom="15dp"
             android:elevation="4dp"
             android:layout_gravity="center"
@@ -102,6 +103,7 @@
                 android:layout_height="wrap_content"
                 android:text="New user?"/>
             <TextView
+                android:id="@+id/text_new_user"
                 android:linksClickable="true"
                 android:textColor="#d24c0f"
                 android:layout_width="wrap_content"
