--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -23,124 +23,135 @@
         android:textColor="#000000"
         android:textSize="22dp"
         android:layout_centerHorizontal="true"/>
-    <LinearLayout
-        android:paddingTop="50dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="80dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+    <ScrollView
+        android:scrollbarStyle="insideOverlay"
+        android:layout_marginTop="50dp"
+        android:paddingTop="20dp"
         android:layout_below="@+id/name"
         android:layout_width="match_parent"
-        android:paddingBottom="10dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <EditText
-            android:layout_marginBottom="5dp"
-            android:id="@+id/user_name"
-            android:paddingLeft="10dp"
-            android:maxLines="1"
-            android:inputType="textPersonName"
-            android:textColor="#000000"
-            android:elevation="4dp"
-            android:layout_margin="10dp"
-            android:paddingTop="0dp"
-            android:textColorHint="#707070"
-            android:hint="Name"
-            android:layout_gravity="left|center"
-            android:drawableLeft="@drawable/ic_person"
-            android:background="@drawable/edit_sign_in_back"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"/>
+        android:layout_height="match_parent">
+        <LinearLayout
 
-        <EditText
-            android:layout_marginBottom="5dp"
-            android:id="@+id/user_phone"
-            android:paddingLeft="10dp"
-            android:maxLines="1"
-            android:inputType="phone"
-            android:elevation="4dp"
-            android:textColor="#000000"
-            android:layout_margin="10dp"
-            android:paddingTop="0dp"
-            android:textColorHint="#707070"
-            android:hint="Phone"
-            android:gravity="center_vertical"
-            android:drawableLeft="@drawable/ic_phone"
-            android:background="@drawable/edit_sign_in_back"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+
             android:layout_width="match_parent"
-            android:layout_height="35dp"/>
-        <EditText
-            android:layout_marginBottom="5dp"
-            android:id="@+id/password"
-            android:paddingLeft="10dp"
-            android:maxLines="1"
-            android:inputType="textPassword"
-            android:elevation="4dp"
-            android:textColor="#000000"
-            android:layout_margin="10dp"
-            android:paddingTop="0dp"
-            android:textColorHint="#707070"
-            android:hint="Password"
-            android:gravity="center_vertical"
-            android:drawableLeft="@drawable/ic_lock"
-            android:background="@drawable/edit_sign_in_back"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"/>
-        <EditText
-            android:layout_marginBottom="5dp"
-            android:id="@+id/confirm_password"
-            android:paddingLeft="10dp"
-            android:maxLines="1"
-            android:inputType="textPassword"
-            android:elevation="4dp"
-            android:textColor="#000000"
-            android:layout_margin="10dp"
-            android:paddingTop="0dp"
-            android:textColorHint="#707070"
-            android:hint="Confirm Password"
-            android:gravity="center_vertical"
-            android:drawableLeft="@drawable/ic_lock"
-            android:background="@drawable/edit_sign_in_back"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"/>
-        <CheckBox
-            android:textColor="#000000"
-            android:layout_width="wrap_content"
+            android:paddingBottom="10dp"
             android:layout_height="wrap_content"
-            android:text="Show Password"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="15dp"
-            android:layout_gravity="right"/>
-        <Button
-            android:id="@+id/send_otp"
-            android:layout_marginBottom="15dp"
-            android:elevation="4dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:textColor="#ffffff"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:background="@drawable/button_background"
-            android:text="Send otp"/>
+            android:orientation="vertical">
+            <EditText
+                android:layout_marginBottom="5dp"
+                android:id="@+id/user_name"
+                android:paddingLeft="10dp"
+                android:maxLines="1"
+                android:inputType="textPersonName"
+                android:textColor="#000000"
+                android:elevation="4dp"
+                android:layout_margin="10dp"
+                android:paddingTop="0dp"
+                android:textColorHint="#707070"
+                android:hint="Name"
+                android:layout_gravity="left|center"
+                android:drawableLeft="@drawable/ic_person"
+                android:background="@drawable/edit_sign_in_back"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"/>
 
-<LinearLayout
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <TextView
-        android:textColor="#ffffff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Already have an account?"/>
-    <TextView
-        android:linksClickable="true"
-        android:textColor="#d24c0f"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" Login here."/>
-</LinearLayout>
-    </LinearLayout>
+            <EditText
+                android:layout_marginBottom="5dp"
+                android:id="@+id/user_phone"
+                android:paddingLeft="10dp"
+                android:maxLines="1"
+                android:inputType="phone"
+                android:elevation="4dp"
+                android:textColor="#000000"
+                android:layout_margin="10dp"
+                android:paddingTop="0dp"
+                android:textColorHint="#707070"
+                android:hint="Phone"
+                android:gravity="center_vertical"
+                android:drawableLeft="@drawable/ic_smartphone_black"
+                android:background="@drawable/edit_sign_in_back"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"/>
+            <EditText
+                android:layout_marginBottom="5dp"
+                android:id="@+id/password"
+                android:paddingLeft="10dp"
+                android:maxLines="1"
+                android:inputType="textPassword"
+                android:elevation="4dp"
+                android:textColor="#000000"
+                android:layout_margin="10dp"
+                android:paddingTop="0dp"
+                android:textColorHint="#707070"
+                android:hint="Password"
+                android:gravity="center_vertical"
+                android:drawableLeft="@drawable/ic_lock"
+                android:background="@drawable/edit_sign_in_back"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"/>
+            <EditText
+                android:layout_marginBottom="5dp"
+                android:id="@+id/confirm_password"
+                android:paddingLeft="10dp"
+                android:maxLines="1"
+                android:inputType="textPassword"
+                android:elevation="4dp"
+                android:textColor="#000000"
+                android:layout_margin="10dp"
+                android:paddingTop="0dp"
+                android:textColorHint="#707070"
+                android:hint="Confirm Password"
+                android:gravity="center_vertical"
+                android:drawableLeft="@drawable/ic_lock"
+                android:background="@drawable/edit_sign_in_back"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"/>
+            <CheckBox
+                android:id="@+id/show_check"
+                android:textColor="#000000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Show Password"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="15dp"
+                android:layout_gravity="right"/>
+            <Button
+                android:id="@+id/send_otp"
+                android:layout_marginBottom="15dp"
+                android:elevation="4dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:textColor="#ffffff"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:background="@drawable/button_background"
+                android:text="Send otp"/>
+
+            <LinearLayout
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:textColor="#ffffff"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Already have an account?"/>
+                <TextView
+                    android:id="@+id/text_old_user"
+                    android:linksClickable="true"
+                    android:textColor="#d24c0f"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" Login here."/>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
 </RelativeLayout>
