--- a/app/src/main/res/layout/card_cart_itme.xml
+++ b/app/src/main/res/layout/card_cart_itme.xml
@@ -9,13 +9,15 @@
 <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <RelativeLayout
         android:paddingLeft="0dp"
         android:gravity="right"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageButton
+            android:id="@+id/item_delete"
+            android:backgroundTint="@color/colorPrimary"
             android:layout_marginRight="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,6 +33,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <ImageView
+                android:layout_marginLeft="5dp"
                 android:scaleType="fitXY"
                 android:layout_gravity="center"
                 android:id="@+id/cart_card_item_image"
@@ -38,10 +41,11 @@
                 android:layout_height="80dp"
                 android:src="@color/colorPrimary"/>
             <TextView
+                android:textAlignment="center"
+                android:autoSizeTextType="none"
+                android:textSize="10dp"
                 android:id="@+id/cart_card_item_name"
                 android:textColor="#000000"
-                android:textStyle="bold"
-                android:layout_margin="5dp"
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
