--- a/app/src/main/res/layout/card_order_item.xml
+++ b/app/src/main/res/layout/card_order_item.xml
@@ -40,14 +40,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <TextView
-            android:id="@+id/order_items"
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_weight="1"
-            android:layout_marginLeft="35dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Gulabjamun,Besan Laddu,Rasogulla"/>
-       <LinearLayout
+            android:id="@+id/order_items_recycler"/>
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="1"-->
+<!--            android:layout_marginLeft="35dp"-->
+<!--            android:id="@+id/oreder_items"/>-->
+        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
@@ -72,6 +76,7 @@
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
            <Button
+               android:id="@+id/button_details"
                android:elevation="4dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
