--- a/app/src/main/res/layout/dialog_order_confirm.xml
+++ b/app/src/main/res/layout/dialog_order_confirm.xml
@@ -9,6 +9,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
+        android:id="@+id/order_id"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,12 +18,14 @@
         android:textColor="#000000"
         android:textSize="20dp"/>
     <TextView
+        android:id="@+id/status_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Delivering to"
         android:layout_gravity="center"
         android:textColor="#000000"/>
     <TextView
+        android:id="@+id/text_address"
         android:layout_margin="5dp"
         android:layout_gravity="center"
         android:layout_width="200dp"
@@ -31,6 +34,7 @@
         android:maxLines="2"
         />
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_dialog_order"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
     <View
@@ -85,6 +89,7 @@
         android:text="Total Rs 430"
         android:gravity="right"/>
     <Button
+        android:id="@+id/button_confirm"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:textColor="#D24C0F"
