--- a/app/src/main/res/layout/fragment_ordersfrag.xml
+++ b/app/src/main/res/layout/fragment_ordersfrag.xml
@@ -8,25 +8,22 @@
 
 <include
     layout="@layout/toolbar_main"/>
-    <TextView
-        android:textColor="#000000"
-        android:layout_margin="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Placed Order"
-        android:layout_below="@+id/toolbar"
-        android:id="@+id/heading"/>
+
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_below="@+id/heading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:id="@+id/recycler_previous_order"/>
-    <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
         android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recycler_order"
-        android:layout_below="@+id/recycler_previous_order"/>
+        android:layout_below="@+id/toolbar"/>
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/text_nothing_in_order"
+        android:textSize="20dp"
+        android:textColor="#D24C0F"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="Nothing in Your Order list"/>
 
 </RelativeLayout>
