--- a/app/src/main/res/layout/card_order_item.xml
+++ b/app/src/main/res/layout/card_order_item.xml
@@ -73,7 +73,7 @@
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delivered"
-                   android:textColor="#00ff00"
+                   android:textColor="@android:color/darker_gray"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
            <Button
