--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,20 +20,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <androidx.cardview.widget.CardView
-                android:layout_margin="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardElevation="4dp"
                 >
                 <LinearLayout
+                    android:layout_gravity="center"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="100dp">
                     <ImageView
+                        android:layout_margin="30dp"
                         android:src="@drawable/ic_contact"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         />
                     <TextView
                         android:id="@+id/address_profile"
@@ -41,13 +41,13 @@
                         android:layout_gravity="start"
                         android:gravity="start|center"
                         android:textAlignment="textStart"
-                        android:padding="10dp"
+                        android:padding="20dp"
                         android:textSize="15dp"
                         android:text="S - 17/286 Nadesar, Varanasi 221002"
-                        android:layout_width="150dp"
+                        android:layout_width="100dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        />
+                        android:layout_weight="1" />
+
                     <FrameLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent">
@@ -63,7 +63,7 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
-                android:layout_margin="5dp"
+                android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardElevation="4dp"
@@ -74,22 +74,22 @@
                     android:layout_height="100dp">
                     <ImageView
                         android:src="@drawable/ic_mode_comment"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"/>
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_margin="30dp"/>
                     <EditText
                         android:inputType="textCapWords"
                         android:textSize="15dp"
                         android:padding="5dp"
                         android:id="@+id/edit_suggestion"
-                        android:layout_gravity="start"
+                        android:layout_gravity="center_vertical"
                         android:gravity="start"
                         android:textAlignment="textStart"
                         android:textColor="@android:color/black"
                         android:hint="Suggestion..."
-                        android:layout_width="150dp"
+                        android:layout_width="100dp"
                         android:background="@drawable/edit_text_box"
-                        android:layout_height="match_parent"
+                        android:layout_height="50dp"
                         android:layout_weight="1"/>
                     <FrameLayout
                         android:layout_width="wrap_content"
@@ -114,7 +114,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:id="@+id/support"
-                    android:layout_margin="5dp"
+                    android:layout_marginTop="20dp"
                     android:weightSum="2"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
@@ -147,25 +147,15 @@
                     </LinearLayout>
                 </LinearLayout>
                 <Button
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+
                     android:text="Log out"
                     android:id="@+id/logout"
-                    android:layout_width="match_parent"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/button_background"/>
             </LinearLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/about"
-                android:text="About Me"
-                android:textStyle="bold"
-                android:textColor="@color/colorAccent"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"/>
         </LinearLayout>
     </ScrollView>
 
