--- a/app/src/main/res/layout/layout_profile.xml
+++ b/app/src/main/res/layout/layout_profile.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:layout_margin="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <FrameLayout
     android:layout_centerHorizontal="true"
@@ -39,6 +40,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:layout_margin="8dp"
         android:id="@+id/name_profile"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
